DIGIHUB-164218: updated ne2 switching autotests